--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 </head>
 <body>
     <div id="wrapper" class="home">
-        <a href="#home" class="top"><img src="images/svg/"></a>
         <div id="mobileNav">
             <a href="#home" class="home"><i class="fas fa-home"></i> HOME</a> 
             <a href="#about" class="about"><i class="fas fa-palette"></i> ABOUT ME</a> 
@@ -44,8 +43,7 @@
                             MY WORK</a> 
                         <a class="contact" href="#contact">
                             <img src="images/svg/ico-map.svg" width="32" height="32"/>
-   
-                            CONTACT</a>
+                        CONTACT</a>
                     </nav>
                 </div>
             </header>
@@ -53,13 +51,18 @@
             <h1>I Design and Develop Websites
                 and Interactive Applications </h1>
        <p>HTML5  /  CSS3  /  WordPress  /  UI Design</p>
-            <a class="btn-anchor" href="#about" title="View portfolio items"><img src="images/svg/ico-anchor.svg"> </a>
+            <a class="btn-anchor" href="#about" title="View portfolio items">
+                <span>Anchors Aweigh!</span>
+                <img src="images/svg/ico-anchor.svg"> 
+            </a>
                 </article>
         </section>
         <div id="content">
         <section id="about">
+            <a href="#home" class="top"><img src="images/svg/ico-diver.png"></a>
+   
             <span class="title" data-aos="fade-up">
-                <img src="images/img-bubbles.png">
+                <img src="images/img-jellyfish.png" class="jellyfish" data-aos="fade-up">
                 <h3>About me</h3>
                 <p>Why you shoud hire me before anyone</p>
                  </span>
@@ -92,57 +95,57 @@
                 <h3>What I've been working on</h3>
                 <p>Why you shoud hire me before anyone</p>
                  </span>
-           <article class="grid">
-            <div class="item" data-aos="fade-up">
+           <article class="grid" data-aos="fade-up">
+            <div class="item">
                 <img src="images/portfolio/img-apt.jpg" alt="Advantage Physical Therapy" width="304" height="240">
                 <p>Advantage Physical Therapy</p>
                 <em>UI DESIGN / WordPress</em>
                 </em>
             </div>
-            <div class="item" data-aos="fade-up">
+            <div class="item">
                 <img src="images/portfolio/nd-app.jpg" alt="Newsday App" width="304" height="240">
 
                 <p>Newsday Appp</p>
                 <em>UI DESIGN</em>
             </div> 
    
-            <div class="item" data-aos="fade-up">
+            <div class="item">
                 <img src="images/portfolio/img-fdm.jpg" alt="Finca Del Mar" width="304" height="240">
    
                 <p>Finca Del Mar</p>
                 <em>UI DESIGN</em>
             </div>
 
-            <div class="item" data-aos="fade-up">
+            <div class="item">
                 <img src="images/portfolio/img-summit.jpg" alt="Summit Financial" width="304" height="240">
                 <p>Summit Financial Group</p>
                 <em>UI DESIGN</em>
             </div>   
-            <div class="item" data-aos="fade-up">
+            <div class="item">
                 <img src="images/portfolio/n12-app.jpg" alt="News 12 App width="304" height="240">
                 <p>News12 Appp</p>
                 <em>UX / UI DESIGN</em>
             </div> 
-            <div class="item" data-aos="fade-up">
+            <div class="item">
                 <img src="images/portfolio/amny-app.jpg" alt="AMNY App" width="304" height="240">
 
                 <p>AMNY Appp</p>
                 <em>uX / UI DESIGN</em>
             </div> 
-            <div class="item" data-aos="fade-up">
+            <div class="item">
                 <a href="https://www.behance.net/gallery/101561589/FT-Construction-Landing-Page">
                 <img src="images/portfolio/img-ftc.jpg" alt="FT Construction" width="304" height="240">
                 <p>FT Construction</p>
                 <em>UI DESIGN</em>
                  </a>
             </div>    
-            <div class="item" data-aos="fade-up">
+            <div class="item">
                 <img src="images/portfolio/img-lhm.jpg" alt="LHM Law Firm" width="304" height="240">
                 <p>c</p>
                 <em>UI DESIGN / WordPress</em>
             </div>   
    
-            <div class="item" data-aos="fade-up">
+            <div class="item">
                 <img src="images/portfolio/img-jcs.jpg" alt="AMNY App" width="304" height="240">
 
                 <p>Jenny's Cleaning Services</p>
@@ -152,9 +155,8 @@
         </section>
         
    <section id="contact">
-       <img src="images/img-angler.png" class="angler" data-aos="fade-up-right"/>
     <div class="title" data-aos="fade-up">
-        <img src="images/img-bubbles.png">
+        <img src="images/img-angler.png" class="angler" data-aos="fade-up-right"/>
         <h3>Contact Me</h3>
         <p>Send me an email or just say hey</p>
     </div>
