--- a/index.html
+++ b/index.html
@@ -61,27 +61,27 @@
         <section id="about">
             <a href="#home" class="top"><img src="images/svg/ico-diver.png"></a>
    
-            <span class="title" data-aos="fade-up">
+            <div class="title" data-aos="fade-up">
                 <img src="images/img-jellyfish.png" class="jellyfish" data-aos="fade-up">
                 <h3>About me</h3>
-                <p>Why you shoud hire me before anyone</p>
-                 </span>
+                <p>A little background about myself</p>
+            </div>
             <article>
                 <aside>
                 <img src="images/img-fish.png" alt="school of fish" width="554" height="297" class="fish" data-aos="fade-up-right"/>
                 </aside>
                 <aside data-aos="fade-left">
-                    <h4>Why work with me</h4>
-                    <p>With 20 years in design and digital marketing, I’ve always prided myself on doing meaningful work; 
-                        approaching each project as a problem that needs solving. My goal is to create solutions that will help 
+                    <h4>I am what I am...</h4>
+                    <p>I am a web designer, graphic artist, UI/UX designer or whatever trendy name they'e giving it. The botom line is, I know how to design the right products for the right situation. 
+                        I’ve always prided myself on doing meaningful work advvantage approaching each project as a problem that needs solving. My goal is to create solutions that will help 
                         your business or organization stand out in this age of digital noise. No fluff, sales presentations, or 
-                        useless tactics. Whatever your needs are, I help you market WITH people and NOT at them.</p>
+                        useless tactics. Whatever your needs are, I will help you market your ideas.</p>
                 </aside>
                 <aside data-aos="fade-right">
-                    <h4>What this means for you</h4>
-                    <p>Each project I undertake is a partnership. My experiene with Interactive design, development, sales, and Direct Marketing campaigns 
-                        combined with your metrics and vision is what creates succesful products. Each project begins with reseach and investigation
-                        into the market, identifying the competition and establishing a competitive advvantage for your organization.</p>
+                    <h4>And that's all that I am...</h4>
+                    <p>I have been a Senior Designer with a large News publisher in New York, as well as a Lead Designer in mid-size to boutique advertising agencies. I have vast  experience taking ideas 
+                        and instruction and turning them into award-winning websites, apps, intranet sites and digital ads. 
+                    </p>
                 </aside>
                 <aside>
                 <img src="images/img-turtle.png" alt="turtle" width="467" height="344" class="turtle" data-aos="fade-up-left"/>
@@ -90,11 +90,11 @@
         </section>
 
         <section id="portfolio">
-            <span class="title" data-aos="fade-up">
+            <div class="title" data-aos="fade-up">
                 <img src="images/img-bubbles.png">
                 <h3>What I've been working on</h3>
-                <p>Why you shoud hire me before anyone</p>
-                 </span>
+                <p>Some of the things I have made</p>
+            </div>
            <article class="grid" data-aos="fade-up">
             <div class="item">
                 <img src="images/portfolio/img-apt.jpg" alt="Advantage Physical Therapy" width="304" height="240">
@@ -157,8 +157,8 @@
    <section id="contact">
     <div class="title" data-aos="fade-up">
         <img src="images/img-angler.png" class="angler" data-aos="fade-up-right"/>
-        <h3>Contact Me</h3>
-        <p>Send me an email or just say hey</p>
+        <h3>And how to get in touch with me</h3>
+        <p>Send me an email, or just say hey</p>
     </div>
 
     <form enctype="multipart/form-data" method="post" data-aos="fade-up">
