--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 <body>
     <div id="wrapper" class="home">
         <div id="mobileNav">
-            <a href="#home" class="home"><i class="fas fa-home"></i> HOME</a> 
-            <a href="#about" class="about"><i class="fas fa-palette"></i> ABOUT ME</a> 
-            <a href="#portfolio" class="portfolio"><i class="fas fa-code"></i> MY WORK</a> 
-            <a href="#contact" class="contact"><i class="fas fa-mobile-alt"></i> CONTACT</a>
+            <a href="#home" class="home"><img src="images/svg/ico-lighthouse.svg" width="32" height="32"/> <span>HOME</span></a> 
+            <a href="#about" class="about"><img src="images/svg/ico-skull.svg" width="32" height="32"/> <span>ABOUT ME</span></a> 
+            <a href="#portfolio" class="portfolio"><img src="images/svg/ico-treasure.svg" width="32" height="32"/> <span>MY WORK</span></a> 
+            <a href="#contact" class="contact"><img src="images/svg/ico-map.svg" width="32" height="32"/> <span>CONTACT</span></a>
         </div>
         <section id="home">
             <header data-aos="fade" data-aos-duration="4000">
@@ -36,14 +36,16 @@
                         </a> 
                         <a href="#about">
                             <img src="images/svg/ico-skull.svg" width="32" height="32"/>
-                            ABOUT ME</a> 
+                            <span>ABOUT ME</span>
+                        </a> 
                         <a href="#portfolio">
                             <img src="images/svg/ico-treasure.svg" width="32" height="32"/>
-   
-                            MY WORK</a> 
+                        <span>MY WORK</span>
+                    </a> 
                         <a class="contact" href="#contact">
                             <img src="images/svg/ico-map.svg" width="32" height="32"/>
-                        CONTACT</a>
+                        <span>CONTACT</span>
+                    </a>
                     </nav>
                 </div>
             </header>
@@ -207,3 +209,4 @@
 
 </body>
 </html>
+
