--- a/index.html
+++ b/index.html
@@ -105,10 +105,11 @@
                 </em>
             </div>
             <div class="item">
+                <a href="https://www.behance.net/gallery/103298725/Newsday-App">
                 <img src="images/portfolio/nd-app.jpg" alt="Newsday App" width="304" height="240">
-
                 <p>Newsday Appp</p>
                 <em>UI DESIGN</em>
+                </a>
             </div> 
    
             <div class="item">
