--- a/index.html
+++ b/index.html
@@ -99,10 +99,11 @@
             </div>
            <article class="grid" data-aos="fade-up">
             <div class="item">
+                <a href="https://www.behance.net/gallery/100948821/Advantage-Physical-Therapy">
                 <img src="images/portfolio/img-apt.jpg" alt="Advantage Physical Therapy" width="304" height="240">
                 <p>Advantage Physical Therapy</p>
                 <em>UI DESIGN / WordPress</em>
-                </em>
+                </a>
             </div>
             <div class="item">
                 <a href="https://www.behance.net/gallery/103298725/Newsday-App">
@@ -113,27 +114,33 @@
             </div> 
    
             <div class="item">
+                <a href="https://www.behance.net/gallery/101996093/Finca-Del-Mar-landing-page">
                 <img src="images/portfolio/img-fdm.jpg" alt="Finca Del Mar" width="304" height="240">
-   
                 <p>Finca Del Mar</p>
                 <em>UI DESIGN</em>
+                </a>
             </div>
 
             <div class="item">
+                <a href="https://www.behance.net/gallery/101429449/Summit-Financial-Landing-Page">
                 <img src="images/portfolio/img-summit.jpg" alt="Summit Financial" width="304" height="240">
                 <p>Summit Financial Group</p>
                 <em>UI DESIGN</em>
+                </a>
             </div>   
             <div class="item">
+                <a href="https://www.behance.net/gallery/103441127/News-12-App">
                 <img src="images/portfolio/n12-app.jpg" alt="News 12 App width="304" height="240">
                 <p>News12 Appp</p>
                 <em>UX / UI DESIGN</em>
+                </a>
             </div> 
             <div class="item">
+                <a href="https://www.behance.net/gallery/103448773/AMNY-Mobile-App">
                 <img src="images/portfolio/amny-app.jpg" alt="AMNY App" width="304" height="240">
-
                 <p>AMNY Appp</p>
                 <em>uX / UI DESIGN</em>
+                </a>
             </div> 
             <div class="item">
                 <a href="https://www.behance.net/gallery/101561589/FT-Construction-Landing-Page">
@@ -143,16 +150,19 @@
                  </a>
             </div>    
             <div class="item">
-                <img src="images/portfolio/img-lhm.jpg" alt="LHM Law Firm" width="304" height="240">
-                <p>c</p>
+                <a href="https://www.behance.net/gallery/101283519/LHM-Law-Firm">
+           <img src="images/portfolio/img-lhm.jpg" alt="LHM Law Firm" width="304" height="240">
+                <p>LHM Law</p>
                 <em>UI DESIGN / WordPress</em>
+                </a>
             </div>   
    
             <div class="item">
+                <a href="https://www.behance.net/gallery/103298725/Newsday-App">
                 <img src="images/portfolio/img-jcs.jpg" alt="AMNY App" width="304" height="240">
-
                 <p>Jenny's Cleaning Services</p>
                 <em>UX / UI DESIGN / HTML</em>
+                </a>
             </div>             
            </article>      
         </section>
