--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             </div>   
    
             <div class="item">
-                <a href="https://www.behance.net/gallery/103298725/Newsday-App">
+                <a href="https://www.behance.net/gallery/101998845/Home-cleaning-service-website">
                 <img src="images/portfolio/img-jcs.jpg" alt="AMNY App" width="304" height="240">
                 <p>Jenny's Cleaning Services</p>
                 <em>UX / UI DESIGN / HTML</em>
@@ -167,38 +167,34 @@
            </article>      
         </section>
         
-   <section id="contact">
-    <div class="title" data-aos="fade-up">
+   <section id="contact" data-aos="fade-up">
+       <article>
+    <div class="title">
         <img src="images/img-angler.png" class="angler" data-aos="fade-up-right"/>
         <h3>And how to get in touch with me</h3>
         <p>Send me an email, or just say hey</p>
     </div>
 
-    <form enctype="multipart/form-data" method="post" data-aos="fade-up">
-        <input id="name" name="action" type="hidden" value="submit"> 
+<div class="bio">
+    <img src="images/svg/logo-mph.svg" class="logo" width="102" height="119"/>
+    <div>
+    <h4>Matthew Hogeboom</h4>
+    
+    <p>I am a web developer and UI Designer living in Laguna Niguel CA. I am availing 
+            for for freelance and in-house projects.</p>
+    </div>
 
-        <div class="flex-input">
-        <span class="name">
-            <label for="name">Name</label> 
-        <input id="email" name="name" placeholder="First, Last name"> 
-    </span>
-    <span class="email">
-        <label for="email">Email</label> 
-        <input name="email" placeholder="Email address"> 
-            </span>
-        </div>
-
-    <span class="msg">
-        <label for="message">Message</label> 
-        <textarea id="message" name="message" rows="5" placeholder="Enter your message"></textarea> 
-    </span>
-    <span>
-        <button type="submit" value="Send email">Send</button>
-    </span>
-      </form>
+</div>
+<div class="soc-icons">
+   <a href="/"><i class="fab fa-facebook-f"></i></a> 
+   <a href="/"><i class="fab fa-instagram"></i></a> 
+   <a href="/"><i class="fab fa-behance"></i></a>
+    <a href="/"> <i class="fab fa-linkedin-in"></i></a>
+</div>
+<a href="/" class="button"><i class="fas fa-cloud-download-alt"></i> Download resume</a>
 
       <img src="images/img-octopus.png" width="1332" height="752" class="octopus" data-aos="fade-up-left"/>
-
+    </article>
    </section>
   
         <footer id="contact">
