--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         <section id="portfolio">
             <div class="title" data-aos="fade-up">
                 <img src="images/img-bubbles.png">
-                <h3>What I've been working on</h3>
-                <p>Some of the things I have made</p>
+                <h3>My work</h3>
+                <p>Some of the things I have bee working on</p>
             </div>
            <article class="grid" data-aos="fade-up">
             <div class="item">
@@ -171,7 +171,7 @@
        <article>
     <div class="title">
         <img src="images/img-angler.png" class="angler" data-aos="fade-up-right"/>
-        <h3>And how to get in touch with me</h3>
+        <h3>Get in touch</h3>
         <p>Send me an email, or just say hey</p>
     </div>
 
@@ -186,12 +186,12 @@
 
 </div>
 <div class="soc-icons">
-   <a href="/"><i class="fab fa-facebook-f"></i></a> 
+   <a href="https://www.facebook.com/matt.hogeboom/"><i class="fab fa-facebook-f"></i></a> 
    <a href="/"><i class="fab fa-instagram"></i></a> 
-   <a href="/"><i class="fab fa-behance"></i></a>
-    <a href="/"> <i class="fab fa-linkedin-in"></i></a>
+   <a href="https://www.behance.net/matthewhog56fa"><i class="fab fa-behance"></i></a>
+    <a href="https://www.linkedin.com/in/matthogeboom/"> <i class="fab fa-linkedin-in"></i></a>
 </div>
-<a href="/" class="button"><i class="fas fa-cloud-download-alt"></i> Download resume</a>
+<a href="pdf/matthogeboom-resume.pdf" class="button"><i class="fas fa-cloud-download-alt"></i> Download resume</a>
 
       <img src="images/img-octopus.png" width="1332" height="752" class="octopus" data-aos="fade-up-left"/>
     </article>
