--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
    <a href="https://www.behance.net/matthewhog56fa"><i class="fab fa-behance"></i></a>
     <a href="https://www.linkedin.com/in/matthogeboom/"> <i class="fab fa-linkedin-in"></i></a>
 </div>
-<a href="pdf/matthogeboom-resume.pdf" class="button"><i class="fas fa-cloud-download-alt"></i> Download resume</a>
+<a href="pdf/matt-hogeboom-resume-2020.pdf" class="button"><i class="fas fa-cloud-download-alt"></i> Download resume</a>
 
       <img src="images/img-octopus.png" width="1332" height="752" class="octopus" data-aos="fade-up-left"/>
     </article>
