--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
                 </aside>
                 <aside data-aos="fade-left">
                     <h4>I am what I am...</h4>
-                    <p>I am a web designer, graphic artist, UI/UX designer or whatever trendy name they'e giving it. The botom line is, I know how to design the right products for the right situation. 
-                        I’ve always prided myself on doing meaningful work advvantage approaching each project as a problem that needs solving. My goal is to create solutions that will help 
-                        your business or organization stand out in this age of digital noise. No fluff, sales presentations, or 
-                        useless tactics. Whatever your needs are, I will help you market your ideas.</p>
+                    <p>I am a web designer, graphic artist, UI/UX designer or whatever name they'e giving it these days. The bottom line is, I know how to design the right products for the right situation. 
+                        I approach each project as a problem that needs solving. My goal is to create solutions that will help 
+                        your business or organization stand out. Without any sales presentations, or 
+                        useless tactics. I will help you market your ideas.</p>
                 </aside>
                 <aside data-aos="fade-right">
                     <h4>And that's all that I am...</h4>
-                    <p>I have been a Senior Designer with a large News publisher in New York, as well as a Lead Designer in mid-size to boutique advertising agencies. I have vast  experience taking ideas 
-                        and instruction and turning them into award-winning websites, apps, intranet sites and digital ads. 
+                    <p>I have been a Senior Designer with a large News publisher in New York, as well as a Lead Designer in mid-size to boutique advertising agencies. I have vast experience taking ideas 
+                        and direction and turning them into award-winning websites, apps, intranet sites and digital ads. 
                     </p>
                 </aside>
                 <aside>
@@ -95,7 +95,7 @@
             <div class="title" data-aos="fade-up">
                 <img src="images/img-bubbles.png">
                 <h3>My work</h3>
-                <p>Some of the things I have bee working on</p>
+                <p>Some of the things I have been working on</p>
             </div>
            <article class="grid" data-aos="fade-up">
             <div class="item">
@@ -180,7 +180,7 @@
     <div>
     <h4>Matthew Hogeboom</h4>
     
-    <p>I am a web developer and UI Designer living in Laguna Niguel CA. I am availing 
+    <p>I am a web developer and UI Designer living in Laguna Niguel CA. I am available 
             for for freelance and in-house projects.</p>
     </div>
 
