--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </aside>
                 <aside data-aos="fade-left">
                     <h4>I am what I am...</h4>
-                    <p>I am a web designer, graphic artist, UI/UX designer or whatever name they'e giving it these days. The bottom line is, I know how to design the right products for the right situation. 
+                    <p>I am a web designer, graphic artist, UI/UX designer depnding on the task handed to me. The bottom line is, I know how to design the right products for the right situation. 
                         I approach each project as a problem that needs solving. My goal is to create solutions that will help 
                         your business or organization stand out. Without any sales presentations, or 
                         useless tactics. I will help you market your ideas.</p>
