--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         useless tactics. I will help you market your ideas.</p>
                 </aside>
                 <aside data-aos="fade-right">
-                    <h4>And that's all that I am...</h4>
+copy                    <h4>And that's not all that I am...</h4>
                     <p>I have been a Senior Designer with a large News publisher in New York, as well as a Lead Designer in mid-size to boutique advertising agencies. I have vast experience taking ideas 
                         and direction and turning them into award-winning websites, apps, intranet sites and digital ads. 
                     </p>
