--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="title" data-aos="fade-up">
                 <img src="images/img-jellyfish.png" class="jellyfish" data-aos="fade-up">
                 <h3>About me</h3>
-                <p>A little background about myself</p>
+                <p>Some background about me</p>
             </div>
             <article>
                 <aside>
@@ -74,7 +74,7 @@
                 </aside>
                 <aside data-aos="fade-left">
                     <h4>I am what I am...</h4>
-                    <p>I am a web designer, graphic artist, UI/UX designer depnding on the task handed to me. The bottom line is, I know how to design the right products for the right situation. 
+                    <p>I am a web designer, graphic artist, UI/UX designer depending on the task handed to me. The bottom line is, I know how to design the right products for the right situation. 
                         I approach each project as a problem that needs solving. My goal is to create solutions that will help 
                         your business or organization stand out. Without any sales presentations, or 
                         useless tactics. I will help you market your ideas.</p>
@@ -95,14 +95,14 @@ copy                    <h4>And that's not all that I am...</h4>
             <div class="title" data-aos="fade-up">
                 <img src="images/img-bubbles.png">
                 <h3>My work</h3>
-                <p>Some of the things I have been working on</p>
+                <p>Some of the things I've been working on</p>
             </div>
            <article class="grid" data-aos="fade-up">
             <div class="item">
                 <a href="https://www.behance.net/gallery/100948821/Advantage-Physical-Therapy">
                 <img src="images/portfolio/img-apt.jpg" alt="Advantage Physical Therapy" width="304" height="240">
                 <p>Advantage Physical Therapy</p>
-                <em>UI DESIGN / WordPress</em>
+                <em>UI DESIGN / WORDPRESS</em>
                 </a>
             </div>
             <div class="item">
@@ -117,7 +117,7 @@ copy                    <h4>And that's not all that I am...</h4>
                 <a href="https://www.behance.net/gallery/101996093/Finca-Del-Mar-landing-page">
                 <img src="images/portfolio/img-fdm.jpg" alt="Finca Del Mar" width="304" height="240">
                 <p>Finca Del Mar</p>
-                <em>UI DESIGN</em>
+                <em>UI DESIGN / HTML / CSS</em>
                 </a>
             </div>
 
@@ -131,7 +131,7 @@ copy                    <h4>And that's not all that I am...</h4>
             <div class="item">
                 <a href="https://www.behance.net/gallery/103441127/News-12-App">
                 <img src="images/portfolio/n12-app.jpg" alt="News 12 App width="304" height="240">
-                <p>News12 Appp</p>
+                <p>News 12 Appp</p>
                 <em>UX / UI DESIGN</em>
                 </a>
             </div> 
@@ -139,21 +139,21 @@ copy                    <h4>And that's not all that I am...</h4>
                 <a href="https://www.behance.net/gallery/103448773/AMNY-Mobile-App">
                 <img src="images/portfolio/amny-app.jpg" alt="AMNY App" width="304" height="240">
                 <p>AMNY Appp</p>
-                <em>uX / UI DESIGN</em>
+                <em>UX / UI DESIGN</em>
                 </a>
             </div> 
             <div class="item">
                 <a href="https://www.behance.net/gallery/101561589/FT-Construction-Landing-Page">
                 <img src="images/portfolio/img-ftc.jpg" alt="FT Construction" width="304" height="240">
                 <p>FT Construction</p>
-                <em>UI DESIGN</em>
+                <em>UI DESIGN / WORDPRESS</em>
                  </a>
             </div>    
             <div class="item">
                 <a href="https://www.behance.net/gallery/101283519/LHM-Law-Firm">
            <img src="images/portfolio/img-lhm.jpg" alt="LHM Law Firm" width="304" height="240">
                 <p>LHM Law</p>
-                <em>UI DESIGN / WordPress</em>
+                <em>UI DESIGN</em>
                 </a>
             </div>   
    
