--- a/work.html
+++ b/work.html
@@ -16,27 +16,27 @@
     
 </head>
 <body>
-    <div id="wrapper" class="home">
+    <div id="wrapper" class="interior">
         <div id="mobileNav">
             <a href="#home" class="home"><img src="images/svg/ico-lighthouse.svg" width="32" height="32"/> <span>HOME</span></a> 
             <a href="#about" class="about"><img src="images/svg/ico-skull.svg" width="32" height="32"/> <span>ABOUT ME</span></a> 
             <a href="work.html" class="portfolio"><img src="images/svg/ico-treasure.svg" width="32" height="32"/> <span>MY WORK</span></a> 
             <a href="contact.html" class="contact"><img src="images/svg/ico-map.svg" width="32" height="32"/> <span>CONTACT</span></a>
         </div>
-        <section id="home">
+        <section id="interior">
             <header data-aos="fade" data-aos-duration="4000">
                 <div class="inner">
-                    <a class="logo" href="/">
-                       <img src="images/svg/logo-mph.svg" class="logo" width="91" height="112"/>
+                    <a href="/">
+                        <img src="images/svg/logo-mph-int.svg" class="logo" width="91" height="112"/>
                     </a>
                     <nav>
-                        <a class="home selected" href="index.html" class="home">
+                        <a href="index.html" class="home">
                             <span>HOME</span>
                         </a> 
                         <a href="about.html">
                             <span>ABOUT ME</span>
                         </a> 
-                        <a href="work.html">
+                        <a class="work selected" href="work.html">
                         <span>MY WORK</span>
                     </a> 
                         <a class="contact" href="contact.html">
@@ -45,52 +45,17 @@
                     </nav>
                 </div>
             </header>
-            <article data-aos="fade-up" data-aos-duration="3000" data-aos-delay="300">
-            <h1>I Design and Develop Websites
-                and Interactive Applications </h1>
-       <p>HTML5  /  CSS3  /  WordPress  /  UI Design</p>
-            <a class="btn-anchor" href="#about" title="View portfolio items">
-                <span>Drop Anchor</span>
-                <img src="images/svg/ico-anchor.svg"> 
-            </a>
-                </article>
         </section>
         <div id="content">
-        <section id="about">
-            <a href="#home" class="top"><img src="images/svg/ico-diver.png"></a>
+            <section id="portfolio">
+                <a href="#home" class="top"><img src="images/svg/ico-diver.png"></a>
    
-            <div class="title" data-aos="fade-up">
-                <h3>About me</h3>
-                <p>Some background about me</p>
-            </div>
-            <article>
-                <aside>
-                <img src="images/splash/img-advantage-physical-therapy.png" alt="school of fish" width="468" height="565" class="fish" data-aos="fade-right"/>
-                </aside>
-                <aside data-aos="fade-left">
-                    <h4>I am what I am...</h4>
-                    <p>I am a web designer, graphic artist, UI/UX designer depending on the task handed to me. The bottom line is, I know how to design the right products for the right situation. 
-                        I approach each project as a problem that needs solving. My goal is to create solutions that will help 
-                        your business or organization stand out. Without any sales presentations, or 
-                        useless tactics. I will help you market your ideas.</p>
-                </aside>
-                <aside data-aos="fade-right">
-                   <h4>And that's not all that I am...</h4>
-                    <p>I have been a Senior Designer with a large News publisher in New York, as well as a Lead Designer in mid-size to boutique advertising agencies. I have vast experience taking ideas 
-                        and direction and turning them into award-winning websites, apps, intranet sites and digital ads. 
-                    </p>
-                </aside>
-                <aside>
-                <img src="images/splash/advantage-physical-therapy-mobile.png" alt="turtle" width="494" height="541" class="turtle" data-aos="fade-left"/>
-                </aside>
-                </article>    
-        </section>
+            <div class="title" data-aos="fade-up"> 
+                    <h3>My work</h3>
+                    <p>Some of the things I've been working on</p>
+            </div> 
 
-        <!-- <section id="portfolio">
-            <div class="title">
-                <h3>My work</h3>
-                <p>Some of the things I've been working on</p>
-            </div>
+
            <article class="grid" data-aos="fade-up">
             <div class="item">
                 <a href="https://www.behance.net/gallery/100948821/Advantage-Physical-Therapy">
@@ -106,22 +71,7 @@
                 <em>UI DESIGN</em>
                 </a>
             </div> 
-   
-            <div class="item">
-                <a href="https://www.behance.net/gallery/101996093/Finca-Del-Mar-landing-page">
-                <img src="images/portfolio/img-fdm.jpg" alt="Finca Del Mar" width="304" height="240">
-                <p>Finca Del Mar</p>
-                <em>UI DESIGN / HTML / CSS</em>
-                </a>
-            </div>
-
-            <div class="item">
-                <a href="https://www.behance.net/gallery/101429449/Summit-Financial-Landing-Page">
-                <img src="images/portfolio/img-summit.jpg" alt="Summit Financial" width="304" height="240">
-                <p>Summit Financial Group</p>
-                <em>UI DESIGN</em>
-                </a>
-            </div>   
+  
             <div class="item">
                 <a href="https://www.behance.net/gallery/103441127/News-12-App">
                 <img src="images/portfolio/n12-app.jpg" alt="News 12 App width="304" height="240">
@@ -135,14 +85,7 @@
                 <p>AMNY Appp</p>
                 <em>UX / UI DESIGN</em>
                 </a>
-            </div> 
-            <div class="item">
-                <a href="https://www.behance.net/gallery/101561589/FT-Construction-Landing-Page">
-                <img src="images/portfolio/img-ftc.jpg" alt="FT Construction" width="304" height="240">
-                <p>FT Construction</p>
-                <em>UI DESIGN / WORDPRESS</em>
-                 </a>
-            </div>    
+            </div>  
             <div class="item">
                 <a href="https://www.behance.net/gallery/101283519/LHM-Law-Firm">
            <img src="images/portfolio/img-lhm.jpg" alt="LHM Law Firm" width="304" height="240">
@@ -159,7 +102,7 @@
                 </a>
             </div>             
            </article>      
-        </section> -->
+        </section>
         
    <!-- <section id="contact" data-aos="fade-up">
        <article>
@@ -193,9 +136,7 @@
   
         <footer id="contact">
             <div class="inner">
-                <a class="logo" href="/">
                 <img src="images/svg/logo-mph-dk.svg">
-            </a>
                 <div class="social-media">
                 <i class="fab fa-facebook-f"></i>
                 <i class="fab fa-instagram-square"></i>
