--- a/about.html
+++ b/about.html
@@ -36,8 +36,8 @@
                         <a class="about selected" href="about.html">
                             <span>ABOUT ME</span>
                         </a> 
-                        <a href="work.html">
-                        <span>MY WORK</span>
+                        <a href="portfolio.html">
+                            <span>MY WORK</span>
                     </a> 
                         <a class="contact btn" href="contact.html">
                         <span>CONTACT</span>
@@ -74,6 +74,10 @@
                     <img src="images/splash/advantage-physical-therapy-mobile.png" alt="turtle" width="494" height="541" class="turtle" data-aos="fade-left"/>
                     </aside>
                     </article>    
+
+                    <article>
+                        
+                    </article>
             </section>
     
         </div>
