--- a/contact.html
+++ b/contact.html
@@ -30,8 +30,8 @@
                         <a href="about.html">
                             <span>ABOUT ME</span>
                         </a> 
-                        <a href="work.html">
-                        <span>MY WORK</span>
+                        <a href="portfolio.html">
+                            <span>MY WORK</span>
                     </a> 
                         <a class="contact btn selected" href="contact.html">
                         <span>CONTACT</span>
