--- a/work.html
+++ b/work.html
@@ -58,6 +58,28 @@
             <div class="item">
                 <a href="https://www.behance.net/gallery/100948821/Advantage-Physical-Therapy">
                 <img src="images/portfolio/img-apt.jpg" alt="Advantage Physical Therapy" width="304" height="240">
+                <p>East End Sign Designs</p>
+                <em>UI DESIGN / WORDPRESS</em>
+                </a>
+            </div>
+            <div class="item">
+                <a href="https://www.behance.net/gallery/103298725/Newsday-App">
+                <img src="images/portfolio/nd-app.jpg" alt="Newsday App" width="304" height="240">
+                <p>Brookhaven Opticians</p>
+                <em>UI DESIGN</em>
+                </a>
+            </div> 
+  
+            <div class="item">
+                <a href="https://www.behance.net/gallery/103441127/News-12-App">
+                <img src="images/portfolio/n12-app.jpg" alt="News 12 App width="304" height="240">
+                <p>JSB Law</p>
+                <em>UX / UI DESIGN</em>
+                </a>
+            </div> 
+            <div class="item">
+                <a href="https://www.behance.net/gallery/100948821/Advantage-Physical-Therapy">
+                <img src="images/portfolio/img-apt.jpg" alt="Advantage Physical Therapy" width="304" height="240">
                 <p>Advantage Physical Therapy</p>
                 <em>UI DESIGN / WORDPRESS</em>
                 </a>
