--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@
     <meta name="description"
         content="I design and build websites and applications for viewing on a television, desktop, tablet or mobile device">
     <meta name="robots" content="noindex,nofollow" />
-    <link href="https://fonts.googleapis.com/css?family=Nunito:400,600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@700&family=Open+Sans:ital@1&display=swap" rel="stylesheet">
     <link href="css/global.css" rel="stylesheet" type="text/css" />
     <!-- <script type="text/javascript" src="js/ani-scroll.js"></script> -->
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
