--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
             <header data-aos="fade" data-aos-duration="4000">
                 <div class="inner">
                     <a href="/">
-                        <img src="images/svg/logo-mph.svg" class="logo" width="91" height="112"/>
+                        <img src="images/svg/logo-mph-dk.svg" class="logo" width="91" height="112"/>
                     </a>
                     <nav>
                         <a href="index.html" class="home">
