--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                            reprehenderit, corporis voluptas consectetur eius quisquam aperiam optio, hic laudantium blanditiis architecto molestiae. 
                         </p>   
 
-                        <a href="/" class="btn">More Information</a>
+                        <a href="about.html" class="btn">More Information</a>
                     </aside>
                     <aside>
                     <img src="images/png/img-matthogeboom.svg" width="520" height="592">
@@ -131,7 +131,7 @@
                         <em>UX / UI DESIGN</em>
                         </a>
                     </div> 
-                    <a href="/" class="btn">More Information</a>
+                    <a href="portfolio.html" class="btn">More Projects</a>
                     </article>
                    
 
