--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
             <header data-aos="fade" data-aos-duration="4000">
                 <div class="inner">
                     <a href="/">
-                        <img src="images/svg/logo-mph.svg" class="logo" width="91" height="112"/>
+                        <img src="images/svg/logo-mph-dk.svg" class="logo" width="91" height="112"/>
                     </a>
                     <nav>
                         <a href="index.html" class="home">
@@ -66,7 +66,7 @@
                     implement a new SEO strategy to generate more leads and leverage a CMS to manage their own content. As the designer 
                     and developer, I redesigned their website with a fresh-looking new responsive website to reflect the quality and level 
                     of their expertise.</p>
-                    <a class="btn" href="/">Case Study</a>
+                    <a class="btn" href="apt.html">Case Study</a>
             </div>
             </div>
 
@@ -81,7 +81,7 @@
                     implement a new SEO strategy to generate more leads and leverage a CMS to manage their own content. As the designer 
                     and developer, I redesigned their website with a fresh-looking new responsive website to reflect the quality and level 
                     of their expertise.</p>
-                    <a class="btn" href="/">Case Study</a>
+                    <a class="btn" href="esd.html">Case Study</a>
             </div>
             </div>
 
@@ -166,6 +166,22 @@
             </a>
             <div>
                 <h3>LHM Law Firm</h3>
+                <em>UI DESIGN / WORDPRESS</em>
+                <p>Advantage Physical Therapy  was aiming to upgrade an outdated website with a more aesthetically pleasing appearance, 
+                    implement a new SEO strategy to generate more leads and leverage a CMS to manage their own content. As the designer 
+                    and developer, I redesigned their website with a fresh-looking new responsive website to reflect the quality and level 
+                    of their expertise.</p>
+                    <a class="btn" href="/">Case Study</a>
+            </div>
+            </div>
+
+
+            <div class="item">
+                <a href="https://www.behance.net/gallery/100948821/Advantage-Physical-Therapy">
+                <img src="images/portfolio/spl-website.jpg" alt="Advantage Physical Therapy" width="539" height="443">
+            </a>
+            <div>
+                <h3>SPL Law</h3>
                 <em>UI DESIGN / WORDPRESS</em>
                 <p>Advantage Physical Therapy  was aiming to upgrade an outdated website with a more aesthetically pleasing appearance, 
                     implement a new SEO strategy to generate more leads and leverage a CMS to manage their own content. As the designer 
